param_launch_pub_sub_ws/log/build_2025-04-12_21-14-25/param_launch_pub_sub_pkg/stdout_stderr.log
-- Found ament_cmake: 2.5.3 (/opt/ros/jazzy/share/ament_cmake/cmake)
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found rclcpp: 28.1.6 (/opt/ros/jazzy/share/rclcpp/cmake)
-- Found rosidl_generator_c: 4.6.5 (/opt/ros/jazzy/share/rosidl_generator_c/cmake)
-- Found rosidl_generator_cpp: 4.6.5 (/opt/ros/jazzy/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 7.3.1 (/opt/ros/jazzy/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 8.4.1 (/opt/ros/jazzy/share/rmw_fastrtps_cpp/cmake)
-- Found OpenSSL: /usr/lib/x86_64-linux-gnu/libcrypto.so (found version "3.0.13")  
-- Found FastRTPS: /opt/ros/jazzy/include (Required is at least version "2.13") 
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found std_msgs: 5.3.5 (/opt/ros/jazzy/share/std_msgs/cmake)
-- Found ament_lint_auto: 0.17.1 (/opt/ros/jazzy/share/ament_lint_auto/cmake)
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: 
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done (0.5s)
-- Generating done (0.0s)
-- Build files have been written to: /home/ubuntu/ROS2/ros_workspace_name/param_launch_pub_sub_ws/build/param_launch_pub_sub_pkg
[ 50%] Building CXX object CMakeFiles/rpm_pub.dir/src/rpm_pub.cpp.o
/home/ubuntu/ROS2/ros_workspace_name/param_launch_pub_sub_ws/src/param_launch_pub_sub_pkg/src/rpm_pub.cpp:30:2: error: expected ‘;’ after class definition
   30 | }
      |  ^
      |  ;
/home/ubuntu/ROS2/ros_workspace_name/param_launch_pub_sub_ws/src/param_launch_pub_sub_pkg/src/rpm_pub.cpp: In constructor ‘RpmPubNode::RpmPubNode()’:
/home/ubuntu/ROS2/ros_workspace_name/param_launch_pub_sub_ws/src/param_launch_pub_sub_pkg/src/rpm_pub.cpp:14:19: error: ‘class RpmPubNode’ has no member named ‘decalare_parameter’; did you mean ‘declare_parameter’?
   14 |             this->decalare_parameter<double>("rpm_val", RPM_DEFAULT_VALUE );
      |                   ^~~~~~~~~~~~~~~~~~
      |                   declare_parameter
/home/ubuntu/ROS2/ros_workspace_name/param_launch_pub_sub_ws/src/param_launch_pub_sub_pkg/src/rpm_pub.cpp:14:38: error: expected primary-expression before ‘double’
   14 |             this->decalare_parameter<double>("rpm_val", RPM_DEFAULT_VALUE );
      |                                      ^~~~~~
/home/ubuntu/ROS2/ros_workspace_name/param_launch_pub_sub_ws/src/param_launch_pub_sub_pkg/src/rpm_pub.cpp: In member function ‘void RpmPubNode::publish_rpm()’:
/home/ubuntu/ROS2/ros_workspace_name/param_launch_pub_sub_ws/src/param_launch_pub_sub_pkg/src/rpm_pub.cpp:22:19: error: ‘class RpmPubNode’ has no member named ‘decalare_parameter’; did you mean ‘declare_parameter’?
   22 |             this->decalare_parameter("rpm_val", rpm_val_param_);
      |                   ^~~~~~~~~~~~~~~~~~
      |                   declare_parameter
/home/ubuntu/ROS2/ros_workspace_name/param_launch_pub_sub_ws/src/param_launch_pub_sub_pkg/src/rpm_pub.cpp: At global scope:
/home/ubuntu/ROS2/ros_workspace_name/param_launch_pub_sub_ws/src/param_launch_pub_sub_pkg/src/rpm_pub.cpp:32:1: error: two or more data types in declaration of ‘main’
   32 | int int main (int argc, char *argv[]) {
      | ^~~
gmake[2]: *** [CMakeFiles/rpm_pub.dir/build.make:76: CMakeFiles/rpm_pub.dir/src/rpm_pub.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/rpm_pub.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
